# angel-s_nixflake

./: .env.sample  .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  CROSS_PLATFORM_SETUP.md  JSON_VALIDATION.md  LICENSE  MULTI_PLATFORM_FLAKE.md  README.md  SSH_KEY_PROTECTION.md  apply-hrm-mcp.sh  backup-files-audit.txt  bootstrap.sh  darwin-configuration.nix  darwin-configuration.nix.backup  darwin-rebuild-wrapper.sh  env-sanitizer.sh  fix-git-and-rebuild.sh  flake.nix  generate-claude-config.sh  home.nix  hrm_reasoning.db  install.sh  json-utils.nix  nixos-configuration.nix  rebuild-with-fix.sh  rebuild-workaround.sh  rebuild.sh  result  setup-hooks.sh  setup-hostname.sh  setup-ssh.sh  simple-rebuild.sh  update-mcp-config.sh  update-nix-enhancements.md  update-nix.sh  validate-claude-config.sh
.direnv/: flake-profile-1-link
.github/: pull_request_template.md
docs/: npm-symlink-management.md  qdrant-quick-start.md  qdrant-semantic-search.md
examples/: README.md  cicd-integration.md  docker-usage.md  linux-installation.md  macos-installation.md  wsl-setup.md
home/: git.nix
hooks/: pre-commit
mcp-qdrant-code-search/: .rooignore  README.md  __init__.py  claude-config-local.json  claude-config.json  code_chunker.py  code_indexer.py  code_searcher.py  config.py  embeddings.py  pyproject.toml  qdrant_service.py  requirements-minimal.txt  requirements.txt  server.py  setup.sh  simple_server.py  test_connection.py  working_server.py
modules/: default.nix
overlays/: nodejs-fix.nix
pkgs/: default.nix
scripts/: README.md  cleanup-npm-symlinks.sh  link-dotfiles.sh  (+7 more)
(+40 files in other folders)
